fix navbar dark mode transition

--- a/frontend/src/Documents/Docs.scss
+++ b/frontend/src/Documents/Docs.scss
@@ -76,6 +76,8 @@
     margin-bottom: 1rem;
 
     .documentHeader {
+        transition: 0.3s;
+
         display: flex;
         align-content: baseline;
 
@@ -218,6 +220,8 @@
     }
 
     .documentHeader {
+        transition: 0.3s;
+
         input {
             transition: 0.3s;
             background: $dark-gray4;
