--- a/frontend/src/Home/Home.scss
+++ b/frontend/src/Home/Home.scss
@@ -23,6 +23,10 @@
 
     .bp3-navbar {
         transition: 0.3s;
+
+        * {
+            transition: 0.3s;
+        }
     }
 
     #uploadingStatusButton {
